working on jekyllrb

--- a/my-awesome-site/_config.yml
+++ b/my-awesome-site/_config.yml
@@ -44,5 +44,12 @@ plugins:
 
 # Assets
 
+defaults:
+  - scope:
+      path: "assets/img"
+    values:
+      image: true
+
+
 sass:
   style: compact # possible values: nested expanded compact compressed
